<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"

    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        >
        <TextView
            android:id="@+id/update_intrebare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add_intrebare"
            android:textSize="40sp"
            android:typeface="serif" />

        <EditText
            android:id="@+id/update_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/add_text"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/update_rasp_A"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/introduceti_A"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/update_rasp_B"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/introduceti_B"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/update_rasp_C"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/introduceti_C"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg_update"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_A"
                android:textSize="20sp"
                android:id="@+id/btn_A_update">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_B"
                android:textSize="20sp"
                android:id="@+id/btn_B_update">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_C"
                android:textSize="20sp"
                android:id="@+id/btn_C_update">
            </RadioButton>
        </RadioGroup>
        <Spinner
            android:id="@+id/update_spinner_categ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:entries="@array/categorytypelist"
            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp"></Space>

        <Button
            android:id="@+id/update_intr_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_corners"
            android:elevation="4dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/btn_confirm"
            android:textColor="@color/colorMidnight" />

    </LinearLayout>
</ScrollView>