<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ReportTwo">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginStart="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:text="@string/rap" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/rap2"
        android:textStyle="bold" />
    <Button
        android:id="@+id/save_select2"
        style="@style/stil_buton"
        android:background="@drawable/round_corners"
        android:backgroundTint="@android:color/background_light"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/salvv"
        android:textColor="#1224C2" />
    <ListView
        android:id="@+id/list_view_select2"
        android:layout_width="wrap_content"
        android:layout_height="400dp">
    </ListView>
    </LinearLayout>

</FrameLayout>