<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:padding="16dp"
    tools:context=".StartingScreenActivity">

    <TextView
        android:id="@+id/text_view_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_start_quiz"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/bun"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0F38"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_start_quiz"
        style="@style/stil_buton"
        android:layout_above="@id/button_altele_quiz"
        android:layout_centerInParent="true"
        android:background="@drawable/round_corners"
        android:backgroundTint="@android:color/background_light"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/start"
        android:textColor="#1224C2" />

    <Button
        android:id="@+id/button_altele_quiz"
        style="@style/stil_buton"
        android:layout_centerInParent="true"
        android:background="@drawable/round_corners"
        android:backgroundTint="@android:color/background_light"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/altele"
        android:textColor="#1224C2" />

    <Spinner
        android:id="@+id/spinner_categorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_altele_quiz"
        android:layout_alignStart="@id/button_start_quiz"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/background_light" />

    <Button
        android:id="@+id/top"
        style="@style/stil_buton"
        android:layout_below="@id/spinner_categorie"
        android:layout_centerInParent="true"
        android:background="@drawable/round_corners"
        android:backgroundTint="@android:color/background_light"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/top"
        android:textColor="#1224C2" />
</RelativeLayout>